--- a/assets/css/build.css
+++ b/assets/css/build.css
@@ -1,3 +1,34 @@
+/* FONTS
+============================================================================= */
+
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/Inter-Regular.woff2") format("woff2"), url("../fonts/Inter-Regular.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'Inter';
+  font-style: italic;
+  font-weight: 500;
+  src: url("../fonts/Inter-MediumItalic.woff2") format("woff2"), url("../fonts/Inter-MediumItalic.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  src: url("../fonts/Inter-SemiBold.woff2") format("woff2"), url("../fonts/Inter-SemiBold.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/Inter-Bold.woff2") format("woff2"), url("../fonts/Inter-Bold.woff") format("woff");
+}
+
 /**
  * This injects Tailwind's base styles, which is a combination of
  * Normalize.css and some additional base styles.
@@ -567,7 +598,7 @@ table {
   */
 
 /* BUTTON
-  ----------------------------------------------------------------------------- */
+  ----------------------------------------------------------------------------*/
 
 .c-button {
   padding: .5rem;
@@ -618,6 +649,37 @@ table {
 
 .c-collapsable--collapsed {
   display: none;
+}
+
+/* Button switch
+  --------------------------------------------------------------------------- */
+
+.c-button-switch {
+  list-style: none;
+  padding: 0;
+  display: inline-flex;
+  border-width: 1px;
+  border-color: #3b477b;
+  border-radius: .25rem;
+  overflow: hidden;
+}
+
+.c-button-switch__item {
+  padding: .75rem;
+  border-right-width: 1px;
+  border-color: #3b477b;
+  color: #91aada;
+}
+
+.c-button-switch > li:last-child > .c-button-switch__item {
+  border-style: none;
+}
+
+.c-button-switch__item.is-active,
+.c-button-switch__item:hover,
+.c-button-switch__item:focus {
+  background-color: #904ef6;
+  color: #fff;
 }
 
 /**
@@ -1421,7 +1483,7 @@ table {
 }
 
 .u-font-sans {
-  font-family: system-ui, BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Inter, system-ui, BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 .u-font-serif {
@@ -4324,7 +4386,7 @@ table {
   }
 
   .sm\:u-font-sans {
-    font-family: system-ui, BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-family: Inter, system-ui, BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   }
 
   .sm\:u-font-serif {
@@ -7127,7 +7189,7 @@ table {
   }
 
   .md\:u-font-sans {
-    font-family: system-ui, BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-family: Inter, system-ui, BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   }
 
   .md\:u-font-serif {
@@ -9930,7 +9992,7 @@ table {
   }
 
   .lg\:u-font-sans {
-    font-family: system-ui, BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-family: Inter, system-ui, BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   }
 
   .lg\:u-font-serif {
@@ -12733,7 +12795,7 @@ table {
   }
 
   .xl\:u-font-sans {
-    font-family: system-ui, BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-family: Inter, system-ui, BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   }
 
   .xl\:u-font-serif {
